--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "antd": "^3.20.7",
+    "antd": "^4.0.0",
+    "@ant-design/icons": "^4.0.0",
     "color": "^3.1.2",
     "cytoscape": "^3.8.2",
     "cytoscape-cola": "^2.3.0",
@@ -50,8 +51,8 @@
     "grpc-web-client": "^0.7.0",
     "jquery": "^3.5.0",
     "papaparse": "^5.2.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-router-dom": "^5.0.1"
   }
 }
