--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.1.0",
     "file-loader": "^4.1.0",
+    "fsevents": "^2.1.3",
     "google-protobuf": "^3.9.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
